fixed layout issue

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -75,6 +75,7 @@ div.overlay {
 .toTranslate {
 	width: 100%;
 	text-align: center;
+	display: flex;
 
 	form {
 		width: 50%;
